# SMSOceanMeshToolkit

./: README.md  setup.cfg  setup.py
.github/: ci.yml
.github/workflows/: ci.yml
SMSOceanMeshToolkit/: DEM.py  Grid.py  Region.py  __init__.py  boundaries.py  clean.py  edges.py  geospatial_data.py  mesh_generator.py  mesh_sizing_functions.py  plotting.py  signed_distance_function.py
SMSOceanMeshToolkit/cpp/: delaunay_class.cpp
SMSOceanMeshToolkit/libs/: _HamiltonJacobi.cp310-win_amd64.pyd  _HamiltonJacobi.cp39-win_amd64.pyd  _delaunay_class.cp310-win_amd64.pyd  _delaunay_class.cp39-win_amd64.pyd  _fast_geometry.cp310-win_amd64.pyd  _fast_geometry.cp39-win_amd64.pyd
data/: Lk_erie_Lk_st_clair_shoreline_polygons.dbf  Lk_erie_Lk_st_clair_shoreline_polygons.qix  Lk_erie_Lk_st_clair_shoreline_polygons.shp  Lk_erie_Lk_st_clair_shoreline_polygons.shx  bathy_SSG_1_120_clip.nc  my_linestrings.dbf  my_linestrings.shp  my_linestrings.shx  my_points.dbf  my_points.qmd  my_points.shp  my_points.shx  my_test_bounding_polygon.dbf  my_test_bounding_polygon.qix  my_test_bounding_polygon.shp  my_test_bounding_polygon.shx
tests/: test_clean.py  test_coastalgeometry.py  test_grid.py  test_mesh_generator_simple.py  test_mesh_sizing_functions.py  test_signed_distance_functions.py
