[metadata]
name = oceanmesh
url = https://github.com/krober10nd/oceanmesh
author = Keith Roberts
email = kroberts@baird.com
description = Tools for oceanmesh to interface with SMS
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
license_files = LICENSE.txt
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Visualization
[options]
packages = find:
install_requires =
        numpy
        pandas
        geopandas
        shapely
        matplotlib
        pyproj
        fiona
        scipy
        xarray
        rioxarray
        scikit-image
	    scikit-fmm 
        inpoly @ git+https://github.com/dengwirda/inpoly-python.git@v0.1.2 
python_requires = >=3.8

